# muduo

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  BUILD.bazel  CMakeLists.txt  CMakeLists.txt~  ChangeLog  ChangeLog2  Doxyfile  License  MacOSX.diff  README  README.md  TODO  WORKSPACE  armlinux.diff  backport.diff  build  build.sh  change_log.md  clang.diff  diff  index.html  learning  macosx.diff  make.sh  premake4.lua  tags
contrib/thrift/: CMakeLists.txt  ThriftConnection.cc  ThriftConnection.h  ThriftServer.cc  ThriftServer.h
contrib/thrift/tests/: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/PaxHeaders.2817/: CMakeLists.txt  cdns  curl  fastcgi  filetransfer  hiredis  hub  idleconnection  maxconnection  multiplexer  pingpong  procmon  roundtrip  shorturl  socks4a  sudoku  twisted  wordcount  zeromq
examples/ace/PaxHeaders.2817/: logging  ttcp
examples/ace/logging/: CMakeLists.txt  client.cc  logrecord.proto  server.cc
examples/ace/ttcp/: CMakeLists.txt  common.cc  common.h  main.cc  ttcp.cc  ttcp_asio_async.cc  ttcp_asio_sync.cc  ttcp_blocking.cc
examples/asio/PaxHeaders.2817/: chat  echo_see_simple  tutorial
examples/asio/chat/: CMakeLists.txt  client.cc  codec.h  loadtest.cc  server.cc  server_threaded.cc  server_threaded_efficient.cc  server_threaded_highperformance.cc
examples/asio/tutorial/: CMakeLists.txt
examples/cdns/: CMakeLists.txt  Resolver.cc  Resolver.h  dns.cc
examples/cdns/PaxHeaders.2817/: CMakeLists.txt  dns.cc
examples/clockerror/: CMakeLists.txt  clockerror.cc
examples/curl/: CMakeLists.txt  Curl.cc  Curl.h  README  download.cc  mcurl.cc
examples/curl/PaxHeaders.2817/: CMakeLists.txt  README  mcurl.cc
examples/document/Chinese/: 01_cpp_noncopyable.txt  02_atomic_operate.txt  03_data_test.txt  04_time_deal.txt  05_exception_currentthread.txt  06_mutex_condition.txt  07_pthread_unuse.txt  08_stringpiece.txt  09_threadpool.txt
examples/fastcgi/: CMakeLists.txt  fastcgi.cc  fastcgi.h  fastcgi_test.cc  nginx.conf
examples/fastcgi/PaxHeaders.2817/: CMakeLists.txt  fastcgi.cc  fastcgi.h  fastcgi_test.cc  nginx.conf
examples/filetransfer/: CMakeLists.txt  download.cc  download2.cc  download3.cc
examples/filetransfer/PaxHeaders.2817/: CMakeLists.txt  download.cc  download2.cc  download3.cc
examples/filetransfer/loadtest/: Client.java  Handler.java
examples/hiredis/: CMakeLists.txt  Hiredis.cc  Hiredis.h  README.md  example_muduo.cc  mrediscli.cc
examples/hiredis/PaxHeaders.2817/: Hiredis.cc  README.md  mrediscli.cc
examples/hiredis/adapter/: muduo.h
examples/hub/: CMakeLists.txt  README  codec.cc  codec.h  hub.cc  pub.cc  pubsub.cc  pubsub.h  sub.cc
examples/hub/PaxHeaders.2817/: CMakeLists.txt  codec.cc  codec.h  pub.cc  pubsub.h  sub.cc
examples/idleconnection/: CMakeLists.txt  echo.cc  echo.h  main.cc  sortedlist.cc
examples/idleconnection/PaxHeaders.2817/: CMakeLists.txt  echo.cc  sortedlist.cc
examples/maxconnection/: CMakeLists.txt  echo.cc  echo.h  main.cc
examples/maxconnection/PaxHeaders.2817/: CMakeLists.txt  echo.cc  main.cc
examples/memcached/: README
examples/memcached/PaxHeaders.2817/: README  client  server
examples/memcached/client/: CMakeLists.txt  bench.cc
examples/memcached/server/: CMakeLists.txt  Item.cc  Item.h  MemcacheServer.cc  MemcacheServer.h  Session.cc  Session.h  footprint_test.cc  server.cc
examples/multiplexer/: CMakeLists.txt  demux.cc  multiplexer.cc  multiplexer_simple.cc
examples/multiplexer/PaxHeaders.2817/: CMakeLists.txt  demux.cc  harness  multiplexer.cc  multiplexer_simple.cc
examples/multiplexer/harness/: run.sh
examples/netty/PaxHeaders.2817/: echo  uptime
examples/netty/discard/: CMakeLists.txt  client.cc  server.cc
examples/netty/echo/: CMakeLists.txt  client.cc  server.cc  server2.cc
examples/netty/uptime/: CMakeLists.txt  uptime.cc
examples/paxos/: CMakeLists.txt
examples/pingpong/: CMakeLists.txt  bench.cc  client.cc  server.cc
examples/pingpong/PaxHeaders.2817/: CMakeLists.txt  (+1 more)
examples/procmon/: CMakeLists.txt  dummyload.cc  plot.cc  plot.h  plot_test.cc  procmon.cc
examples/protobuf/: CMakeLists.txt
examples/roundtrip/: CMakeLists.txt  roundtrip.cc  roundtrip_udp.cc
examples/shorturl/: CMakeLists.txt  shorturl.cc
examples/simple/: CMakeLists.txt  premake4.lua
examples/socks4a/: CMakeLists.txt  balancer.cc  socks4a.cc  tcprelay.cc  tunnel.h
examples/sudoku/: CMakeLists.txt  batch.cc  client.cc  eight.cc  eight.h  loadtest.cc  percentile.h  pipeline.cc  server_basic.cc  server_hybrid.cc  server_multiloop.cc  server_prod.cc  server_threadpool.cc  stat.h  stat_unittest.cc  sudoku.cc  sudoku.h
examples/thrift/: CMakeLists.txt  ThriftServer.h
examples/udp/: CMakeLists.txt
examples/wordcount/: CMakeLists.txt  README  gen.py  hash.h  hasher.cc  receiver.cc  slowsink.py
examples/zeromq/: CMakeLists.txt  README  local_lat.cc  remote_lat.cc
muduo/base/: AsyncLogging.cc  AsyncLogging.h  Atomic.h  BUILD.bazel  BlockingQueue.h  BoundedBlockingQueue.h  CMakeLists.txt  Condition.cc  Condition.h  CountDownLatch.cc  CountDownLatch.h  CurrentThread.cc  CurrentThread.h  Date.cc  Date.h  Exception.cc  Exception.h  FileUtil.cc  FileUtil.h  GzipFile.h  LogFile.cc  LogFile.h  LogStream.cc  LogStream.h  Logging.cc  Logging.h  Mutex.h  ProcessInfo.cc  ProcessInfo.h  Singleton.h  StringPiece.h  Thread.cc  Thread.h  ThreadLocal.h  ThreadLocalSingleton.h  ThreadPool.cc  ThreadPool.h  TimeZone.cc  TimeZone.h  Timestamp.cc  (+8 more)
muduo/net/: Acceptor.cc  Acceptor.h  BUILD.bazel  Buffer.cc  Buffer.h  CMakeLists.txt  Callbacks.h  Channel.cc  Channel.h  ChannelBuffer.cc  ChannelBuffer.h  Connector.cc  Connector.h  DefaultPoller.cc  EPollPoller.cc  EPollPoller.h  Endian.h  EventLoop.cc  EventLoop.h  EventLoopPool.cc  EventLoopPool.h  EventLoopThread.cc  EventLoopThread.h  EventLoopThreadPool.cc  EventLoopThreadPool.h  GzipStream.h  InetAddress.cc  InetAddress.h  PollPoller.cc  PollPoller.h  Poller.cc  Poller.h  Socket.cc  Socket.h  SocketsOps.cc  SocketsOps.h  TcpClient.cc  TcpClient.h  TcpConnection.cc  TcpConnection.h  (+16 more)
(+381 files in other folders)
